# Django-blog

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
mysite/: settings.py
polls/: admin.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: index.html
polls/templates/polls/: detail.html  index.html  results.html
