[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["kyoodong <wind.dong.dream@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
Django = "^3.1.4"
mysqlclient = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
